--- a/app/app/index.html
+++ b/app/app/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- <base href="/" /> -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' ws://127.0.0.1:3000 ws://localhost:3000; object-src 'none'; base-uri 'self'; form-action 'none';"
+    />
+    <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+    <title>Solid App</title>
+  </head>
 
-<head>
-  <!-- <base href="/" /> -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-  <title>Solid App</title>
-</head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-
-  <script src="/src/index.tsx" type="module"></script>
-</body>
-
+    <script src="/src/index.tsx" type="module"></script>
+  </body>
 </html>
